# DooSelection

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  doxygen.conf  id_rsa_dooselection.enc  install_version
TestWiese/: CMakeLists.txt
TestWiese/TestReducer/: CMakeLists.txt  ReducerMainKS_2011_OwnTuple.cpp
TestWiese/TestVeto/: CMakeLists.txt  TestVeto.cpp
cmake/Modules/: FindROOT.cmake
doc/: doxygen_doc.h
examples/GrimReaper/: ArrayFlattenerGrimReaper.cfg  MultiCutGrimReaper.cfg  TMVAGrimReaper.cfg  VariableCategorizerGrimReaper.cfg  VariableRenamerGrimReaper.cfg
examples/TMVA/: TMVA_Classification_Example.cfg  TMVA_Reducer_Example.cfg
main/: CMakeLists.txt
main/ComparisonTools/: CMakeLists.txt  MCDataSeparationComparison.cpp  SweightDataChi2ClassifierSeparationComparison.cpp
main/GrimReaper/: AddBranchGrimReaper.cpp  AddCategoryGrimReaper.cpp  ArrayFlattenerGrimReaper.cpp  B02DDVariablesGrimReaper.cpp  B02DDVariablesGrimReaper_future.cpp  B02DDWSVariablesGrimReaper.cpp  BackgroundCategorizerGrimReaper.cpp  Bd2JpsiKSVariablesGrimReaper.cpp  Bd2psi2SJpsipipiKSVariablesGrimReaper.cpp  Bd2psi2SKSVariablesGrimReaper.cpp  Bd2psi2SmumuKSVariablesGrimReaper.cpp  CMakeLists.txt  CandidateSelectionGrimReaper.cpp  DooVariablesGrimReaper.cpp  FitTupleGrimReaper.cpp  FlavourTaggingCalibrationGrimReaper.cpp  FlavourTaggingCombinationGrimReaper.cpp  FlavourTaggingGrimReaper.cpp  KeepListOfBranchesGrimReaper.cpp  Lb2psi2SmumuLVariablesGrimReaper.cpp  MomentumArrayFlattenerGrimReaper.cpp  MultiCutGrimReaper.cpp  MultipleCandidateAnalyseGrimReaper.cpp  RemoveBranchesGrimReaper.cpp  RemoveSingleBranchGrimReaper.cpp  SingleCutGrimReaper.cpp  TMVAGrimReaper.cpp  VariableCategorizerGrimReaper.cpp  VariableRenamerGrimReaper.cpp  WrongPVGrimReaper.cpp
main/TMVATools/: CMakeLists.txt  TMVAClassification.cpp  TMVAClassification_v608.cpp  TMVAGrimReaper.cpp  TMVAGui.C  TMVAReducer.cpp  TMVAViewer.cpp
python/: CMakeLists.txt
scripts/: rebuild_cmake.sh
src/dooselection/: CMakeLists.txt
src/dooselection/mctools/: CMakeLists.txt
src/dooselection/mctools/idtranslator/: IDTranslator.cpp  IDTranslator.h
src/dooselection/mctools/mcdecaymatrixreader/: CondDBTranslator.cpp  CondDBTranslator.h  CondDB_particle_table.txt  MCDecayMatrixReader.cpp  MCDecayMatrixReader.h  Particle.cpp  Particle.h
src/dooselection/performance/: CMakeLists.txt  performance.cpp  performance.h
src/dooselection/performance/SelectionClassifier/: SelectionClassifier.h
src/dooselection/performance/SelectionTuple/: SelectionTuple.h
src/dooselection/reducer/: ArrayFlattenerReducer.cpp  ArrayFlattenerReducer.h  BkgCategorizerReducer.cpp  BkgCategorizerReducer.h  BkgCategorizerReducer2.cpp  BkgCategorizerReducer2.h  CMakeLists.txt  KinematicReducerLeaf.cpp  KinematicReducerLeaf.h  LeafDoublerReducer.cpp  LeafDoublerReducer.h  MergeTupleReducer.cpp  MergeTupleReducer.h  MomentumArrayFlattenerReducer.cpp  MomentumArrayFlattenerReducer.h  MultipleCandidateAnalyseReducer.cpp  MultipleCandidateAnalyseReducer.h  Reducer.cpp  Reducer.h  ReducerLeaf.cpp  ReducerLeaf.h  SPlotterReducer.cpp  SPlotterReducer.h  ShufflerReducer.cpp  ShufflerReducer.h  SimSPlotReducer.cpp  SimSPlotReducer.h  TMVAClassificationReducer.cpp  TMVAClassificationReducer.h  VariableCategorizerReducer.cpp  VariableCategorizerReducer.h  WrongPVReducer.cpp  WrongPVReducer.h
src/dooselection/triage/: AbsFitterTuple.h  CMakeLists.txt  Classifier.h  ClassifierList.h  FTTuple.h  FoM.cpp  FoM.h  MCTuple.h  SWTuple.h  Triage.h  TriageBestCut.cpp  TriageClassifierDistribution.cpp  TriageGeneral.cpp  TriageHistContainer.h  TriagePerformance.cpp  Tuple.h  TupleList.h
