add_executable(SingleCutGrimReaper SingleCutGrimReaper.cpp)
add_executable(MultiCutGrimReaper MultiCutGrimReaper.cpp)
add_executable(VariableRenamerGrimReaper VariableRenamerGrimReaper.cpp)
add_executable(VariableCategorizerGrimReaper VariableCategorizerGrimReaper.cpp)
add_executable(ArrayFlattenerGrimReaper ArrayFlattenerGrimReaper.cpp)
add_executable(MultipleCandidateAnalyseGrimReaper MultipleCandidateAnalyseGrimReaper.cpp)
add_executable(CandidateSelectionGrimReaper CandidateSelectionGrimReaper.cpp)
add_executable(Bd2JpsiKSVariablesGrimReaper Bd2JpsiKSVariablesGrimReaper.cpp)
add_executable(Bd2psi2SKSVariablesGrimReaper Bd2psi2SKSVariablesGrimReaper.cpp)
add_executable(FitTupleGrimReaper FitTupleGrimReaper.cpp)
add_executable(FlavourTaggingGrimReaper FlavourTaggingGrimReaper.cpp)
add_executable(TMVAGrimReaper TMVAGrimReaper.cpp)

target_link_libraries(SingleCutGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(MultiCutGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(VariableRenamerGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(VariableCategorizerGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(ArrayFlattenerGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(MultipleCandidateAnalyseGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(CandidateSelectionGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(Bd2JpsiKSVariablesGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(Bd2psi2SKSVariablesGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(FitTupleGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(FlavourTaggingGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(TMVAGrimReaper dsReducer ${DooCore_LIBRARIES} ${ROOFIT_LIBRARIES} ${ROOT_LIBRARIES} ${Boost_LIBRARIES})

install(TARGETS SingleCutGrimReaper DESTINATION bin)
install(TARGETS MultiCutGrimReaper DESTINATION bin)
install(TARGETS VariableRenamerGrimReaper DESTINATION bin)
install(TARGETS VariableCategorizerGrimReaper DESTINATION bin)
install(TARGETS ArrayFlattenerGrimReaper DESTINATION bin)
install(TARGETS MultipleCandidateAnalyseGrimReaper DESTINATION bin)
install(TARGETS CandidateSelectionGrimReaper DESTINATION bin)
install(TARGETS Bd2JpsiKSVariablesGrimReaper DESTINATION bin)
install(TARGETS Bd2psi2SKSVariablesGrimReaper DESTINATION bin)
install(TARGETS FitTupleGrimReaper DESTINATION bin)
install(TARGETS FlavourTaggingGrimReaper DESTINATION bin)
install(TARGETS TMVAGrimReaper DESTINATION bin)
