add_executable(AddCategoryGrimReaper AddCategoryGrimReaper.cpp)
add_executable(SingleCutGrimReaper SingleCutGrimReaper.cpp)
add_executable(MultiCutGrimReaper MultiCutGrimReaper.cpp)
add_executable(VariableRenamerGrimReaper VariableRenamerGrimReaper.cpp)
add_executable(VariableCategorizerGrimReaper VariableCategorizerGrimReaper.cpp)
add_executable(ArrayFlattenerGrimReaper ArrayFlattenerGrimReaper.cpp)
add_executable(BackgroundCategorizerGrimReaper BackgroundCategorizerGrimReaper.cpp)
add_executable(MultipleCandidateAnalyseGrimReaper MultipleCandidateAnalyseGrimReaper.cpp)
add_executable(RemoveSingleBranchGrimReaper RemoveSingleBranchGrimReaper.cpp)
add_executable(RemoveBranchesGrimReaper RemoveBranchesGrimReaper.cpp)
add_executable(CandidateSelectionGrimReaper CandidateSelectionGrimReaper.cpp)
add_executable(Bd2psi2SJpsipipiKSVariablesGrimReaper Bd2psi2SJpsipipiKSVariablesGrimReaper.cpp)
add_executable(Bd2psi2SmumuKSVariablesGrimReaper Bd2psi2SmumuKSVariablesGrimReaper.cpp)
add_executable(FitTupleGrimReaper FitTupleGrimReaper.cpp)
add_executable(FlavourTaggingCalibrationGrimReaper FlavourTaggingCalibrationGrimReaper.cpp)
add_executable(FlavourTaggingGrimReaper FlavourTaggingGrimReaper.cpp)
add_executable(TMVAGrimReaper TMVAGrimReaper.cpp)
add_executable(WrongPVGrimReaper WrongPVGrimReaper.cpp)
add_executable(FlavourTaggingCombinationGrimReaper FlavourTaggingCombinationGrimReaper.cpp)
add_executable(AddBranchGrimReaper AddBranchGrimReaper.cpp)
add_executable(Lb2psi2SmumuLVariablesGrimReaper Lb2psi2SmumuLVariablesGrimReaper.cpp)

target_link_libraries(AddCategoryGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(SingleCutGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(MultiCutGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(VariableRenamerGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(VariableCategorizerGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(ArrayFlattenerGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(BackgroundCategorizerGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(MultipleCandidateAnalyseGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(RemoveSingleBranchGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(RemoveBranchesGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(CandidateSelectionGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(Bd2psi2SJpsipipiKSVariablesGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(Bd2psi2SmumuKSVariablesGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(FitTupleGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(FlavourTaggingCalibrationGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(FlavourTaggingGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(TMVAGrimReaper dsReducer ${DooCore_LIBRARIES} ${ROOFIT_LIBRARIES} ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
target_link_libraries(WrongPVGrimReaper dsReducer ${DooCore_LIBRARIES} ${ROOFIT_LIBRARIES} ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
target_link_libraries(FlavourTaggingCombinationGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(AddBranchGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(Lb2psi2SmumuLVariablesGrimReaper dsReducer ${ALL_LIBRARIES})

install(TARGETS AddCategoryGrimReaper DESTINATION bin)
install(TARGETS SingleCutGrimReaper DESTINATION bin)
install(TARGETS MultiCutGrimReaper DESTINATION bin)
install(TARGETS VariableRenamerGrimReaper DESTINATION bin)
install(TARGETS VariableCategorizerGrimReaper DESTINATION bin)
install(TARGETS ArrayFlattenerGrimReaper DESTINATION bin)
install(TARGETS BackgroundCategorizerGrimReaper DESTINATION bin)
install(TARGETS MultipleCandidateAnalyseGrimReaper DESTINATION bin)
install(TARGETS RemoveSingleBranchGrimReaper DESTINATION bin)
install(TARGETS RemoveBranchesGrimReaper DESTINATION bin)
install(TARGETS CandidateSelectionGrimReaper DESTINATION bin)
install(TARGETS Bd2psi2SJpsipipiKSVariablesGrimReaper DESTINATION bin)
install(TARGETS Bd2psi2SmumuKSVariablesGrimReaper DESTINATION bin)
install(TARGETS FitTupleGrimReaper DESTINATION bin)
install(TARGETS FlavourTaggingCalibrationGrimReaper DESTINATION bin)
install(TARGETS FlavourTaggingGrimReaper DESTINATION bin)
install(TARGETS TMVAGrimReaper DESTINATION bin)
install(TARGETS WrongPVGrimReaper DESTINATION bin)
install(TARGETS FlavourTaggingCombinationGrimReaper DESTINATION bin)
install(TARGETS AddBranchGrimReaper DESTINATION bin)
install(TARGETS Lb2psi2SmumuLVariablesGrimReaper DESTINATION bin)